Thu Aug  5 16:36:01 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:
        * tools/monitor:
        * tools/monitor/Monitor.mpc:
        * tools/monitor/README:
        * tools/monitor/doc/userguide.html:

          Rmoved 'odds_' decorator from the command name.

        * tools/odds_monitor:

          Removed these files.

Thu Aug  5 16:16:43 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:
        * java/jms/compat/build.xml:
        * tools/repoctl:
        * tools/repoctl/repoctl.cpp:
        * tools/repoctl/repoctl.mpc:

          Removed 'odds_' decorator from the command name.

        * tools/odds_repoctl:
        * tools/odds_repoctl/odds_repoctl.mpc:
        * tools/odds_repoctl/odds_repoctl.cpp:
        * tools/repoctl/odds_repoctl.mpc:
        * tools/repoctl/odds_repoctl.cpp:

          Removed these files.

Wed Aug  4 17:41:10 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Removed a bebug message added in last commit.

Wed Aug  4 16:45:10 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/Qos_Helper.inl:

          - Validated sec part to avoid sec in ACE_Time_Value
            overflow in duration_to_time_value(). It returns
            ACE_Time_Value as large as ACE_Time_Value::max_time.
          - Added duration_to_absolute_time_value() which also
            validate the return ACE_Time_Value to avoid sec
            overflow.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WaitSet.cpp:

          Applied duration_to_absolute_time_value method.

        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          Fixed bugs that did not wake up blocking writers
          when receiving a sample already in release queue.

        * tests/DCPS/FooTest3_1/SimpleDataReader.cpp: