@@ -15,6 +15,8 @@
 
 #include "../common/TestSupport.h"
 
+#include <iostream>
+
 using namespace OpenDDS::DCPS;
 
 int
@@ -29,26 +31,31 @@ ACE_TMAIN(int, ACE_TCHAR*[])
     time_t sec = tv.sec ();
     suseconds_t usec = tv.usec ();
     unsigned long msec = tv.msec ();
-    TEST_CHECK (tv.sec() == ACE_Time_Value::max_time.sec());
-    TEST_CHECK (tv.usec() == ACE_Time_Value::max_time.usec());
-
-    ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t)infinite sec and nsec convert to time value:")
-                          ACE_TEXT (" sec %d usec %d msec %u\n"), 
-      sec, usec, msec));
+    
+    //std::cout << "infinite sec and nsec convert to time value: sec=" 
+    //          << sec << " usec=" << usec << " msec=" << msec << std::endl;
+    
+    TEST_CHECK (tv.sec() == ACE_Time_Value::max_time.sec() 
+             || tv.sec() == duration.sec  + duration.nanosec/1000/ACE_ONE_SECOND_IN_USECS);
+    TEST_CHECK (tv.usec() == ACE_Time_Value::max_time.usec() 
+             || tv.usec() == duration.nanosec/1000%ACE_ONE_SECOND_IN_USECS);
   }
   
   {
-    ACE_Time_Value tv = duration_to_absolute_time_value(duration);
+    ACE_Time_Value now = ACE_OS::gettimeofday ();
+    ACE_Time_Value tv = duration_to_absolute_time_value(duration, now);
     // see value.
     time_t sec = tv.sec ();
     suseconds_t usec = tv.usec ();
     unsigned long msec = tv.msec ();
-    TEST_CHECK (tv.sec() == ACE_Time_Value::max_time.sec());
-    TEST_CHECK (tv.usec() == ACE_Time_Value::max_time.usec());
-    
-    ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t)infinite sec and nsec convert to absolute ")
-                          ACE_TEXT ("time value: sec %d usec %d msec %u\n"), 
-      sec, usec, msec));
+
+    //std::cout << "infinite sec and nsec convert to absolute time value: sec=" 
+    //          << sec << " usec=" << usec << " msec=" << msec << std::endl;
+
+    TEST_CHECK (tv.sec() == ACE_Time_Value::max_time.sec() 
+             || tv.sec() == duration.sec  + now.sec() + (duration.nanosec/1000 + now.usec ())/ACE_ONE_SECOND_IN_USECS);
+    TEST_CHECK (tv.usec() == ACE_Time_Value::max_time.usec() 
+             || tv.usec() == (duration.nanosec/1000 + now.usec ())%ACE_ONE_SECOND_IN_USECS);
   }
   {
     duration.sec = ::DDS::DURATION_INFINITE_SEC - 2;
@@ -58,13 +65,13 @@ ACE_TMAIN(int, ACE_TCHAR*[])
     time_t sec = tv.sec ();
     suseconds_t usec = tv.usec ();
     unsigned long msec = tv.msec ();
-    TEST_CHECK (tv.sec() == ::DDS::DURATION_INFINITE_SEC);
-    TEST_CHECK (tv.usec() == ::DDS::DURATION_INFINITE_NSEC/1000%ACE_ONE_SECOND_IN_USECS);
-    TEST_CHECK (tv < ACE_Time_Value::max_time);
-    ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t)finite sec and infinite nsec ")
-                          ACE_TEXT ("conversion: sec %d usec %d msec %u\n"), 
-      sec, usec, msec));
 
+    //std::cout << "finite sec convert to time value: sec=" 
+    //          << sec << " usec=" << usec << " msec=" << msec << std::endl;
+
+    TEST_CHECK (tv.sec() == duration.sec  + duration.nanosec/1000/ACE_ONE_SECOND_IN_USECS);
+    TEST_CHECK (tv.usec() == duration.nanosec/1000%ACE_ONE_SECOND_IN_USECS);
+    TEST_CHECK (tv < ACE_Time_Value::max_time);
   }
   return 0;
 }
